DemoMetadata/unpackaged/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>car_state__c</fullName>
        <label>Состояние</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>б/у</fullName>
                </value>
                <value>
                    <fullName>Новая</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>car_take__c</fullName>
        <label>Дата выдачи авто</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <label>Дата закрытия сделки</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>prod_year__c</fullName>
        <label>Год производства</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>VIN__c</columns>
        <columns>prod_year__c</columns>
        <columns>car_state__c</columns>
        <columns>ASSET.QUANTITY</columns>
        <columns>ASSET.PRICE</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Все активы</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>